<resources>
    <string name="app_name">ApVerse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_room">Discussion Room</string>
    <string name="menu_book">Library Book</string>
    <string name="menu_reservation">Book Reservation</string>
    <string name="menu_computer">Computer</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="room1">1</string>
    <string name="room2">2</string>
    <string name="room3">3</string>
    <string name="room4">4</string>
    <string name="room5">5</string>
    <string name="room6">6</string>
    <string name="room7">7</string>
    <string name="room8">8</string>
    <string name="capa4">4</string>
    <string name="capa8">8</string>
</resources>