<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_s_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_s_room"
            android:icon="@drawable/room"
            android:title="@string/menu_room" />
        <item
            android:id="@+id/nav_s_book"
            android:icon="@drawable/book"
            android:title="@string/menu_book"/>
        <item
            android:id="@+id/nav_s_computer"
            android:icon="@drawable/computer"
            android:title="@string/menu_computer" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>