<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_l_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_l_room"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_room"/>
        <item
            android:id="@+id/nav_l_book"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_book"/>
        <item
            android:id="@+id/nav_l_reservation"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/menu_reservation"/>
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout"/>
    </group>
</menu>